Added .hintrc and .stylelintrc.json

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="https://kit.fontawesome.com/b669f5742f.js" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="./css/style.css">
 <title>Document</title>
 </head>
 <body>
@@ -52,8 +52,11 @@
    </section>
 
    <section id="how-it-works">
-   <iframe  id="video" width="600px" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1&mute=1">
-   </iframe>
+
+   <!-- <iframe  id="video" width="600px" height="345" 
+   src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1&mute=1">
+   </iframe> -->
+
    </section> 
 
    <section id="pricing">
