Solving linters errors

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<script src="https://kit.fontawesome.com/b669f5742f.js" crossorigin="anonymous"></script>
+<!-- <script src="https://kit.fontawesome.com/b669f5742f.js" crossorigin="anonymous"></script> -->
 <link rel="stylesheet" href="./css/style.css">
 <title>Document</title>
 </head>
@@ -21,7 +21,7 @@
       </header>
       <form id="form"  action="https://www.freecodecamp.com/email-submit">
       <h2>Handcrafted, home-made masterpieces</h2>
-      <input name="email" id="email" type="email" placeholder="Enter your email adress">
+      <input name="email" id="email" type="email" placeholder="Enter your email address">
       <input id="submit"  type="submit" value="Get Started" >
       </form>
       <section id="features">
@@ -49,15 +49,7 @@
       instrument</p>
       </div>
    </div>
-   </section>
-
-   <section id="how-it-works">
-
-   <!-- <iframe  id="video" width="600px" height="345" 
-   src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1&mute=1">
-   </iframe> -->
-
-   </section> 
+   </section>   
 
    <section id="pricing">
       <div class="product">
@@ -80,7 +72,7 @@
       </div>
    </section>    
 
-<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+<!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
 
 </body>
 </html>
